create feature added

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,8 @@
 <h1>Boas vindas ao CookBook!</h1>
+
+<%# <a href="/recipes/new">Cadastrar receita</a> %>
+<%= link_to 'Cadastrar receita', new_recipe_path %>
+
 <% @recipes.each do |recipe| %>
   <h3><%= recipe.title %></h3>
   <dl>
